# archetype_mapper

./: .gitignore  CITATION.cff  README.md  pyproject.toml
notebooks/: demo_workflow.ipynb
output_data/: archetypes.tif  archetypes.tif.aux.xml  class_id_lookup.json  clc_clipped.tif  clc_clipped.tif.aux.xml  coast_buffer.tif  coast_buffer.tif.aux.xml  dem_clipped.tif.aux.xml  eunis_clipped.tif  eunis_clipped.tif.aux.xml  imperviousness_clipped.tif.aux.xml  pop_density_clipped.tif  pop_density_clipped.tif.aux.xml  river_buffer.tif
src/land_archetypes/: __init__.py  archetype_classification.py  archetype_profiler.py  climate_land_unit_classification.py  kcs_catalogue.json
src/land_archetypes/archetype_classes/: archetype_classes.json
src/land_archetypes/input_layers_mapping/: clc_mapping.csv  eunis_l2_mapping.csv  mapping_tools.py
src/land_archetypes/utilities/: geoprocessing_tools.py
tests/: conftest.py  test_archetype_classification.py  test_archetype_profiler.py  test_clu_classification.py
