[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landarchetypes"
version = "0.1.0"
description = "Classify regions into landscape archetypes from multi-layer geospatial inputs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Ioannis Tsakmakis", email = "itsakmak@envrio.org" },
    { name = "Nikolaos Kokkos", email = "nkokkos@envrio.org" }
]
keywords = ["geospatial", "landscape", "archetypes", "corine", "eunis", "classification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS"
]
dependencies = [
  "xarray>=2026.2.0",
  "rioxarray>=0.22.0",
  "pandas>=3.0.1",
  "geopandas>=1.1.3"
]

[project.optional-dependencies]
dev = [
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]